feat: 프로젝트 구조 개선 및 종속성 관리 변경
- 소스 코드를 src 디렉토리로 이동
- requirements.txt 제거 및 pyproject.toml에 black 추가
- uv를 사용한 종속성 관리
- config.toml 기본값 설정
- 로그인 검증 기능 추가
- README 업데이트

--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,9 @@
 [account]
-ID = ""
-PW = ""
+ID = "syj0318"
+PW = "@gjtQ6v5q@GxY8B"
 
 [setting]
-loop = false
+loop = true
 
 [setting.matching_game]
 count = 10
