--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.3",
+    "black>=25.1.0",
     "httpx>=0.28.1",
     "selenium>=4.31.0",
     "toml>=0.10.2",
