--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "beautifulsoup4>=4.13.3",
     "black>=25.1.0",
     "httpx>=0.28.1",
+    "ruff>=0.11.6",
     "selenium>=4.31.0",
     "toml>=0.10.2",
     "typer>=0.15.2",
